cmake_minimum_required(VERSION 3.26)
project(124263_CAT_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(124263_CAT_2 main.cpp)
add_executable(Question_1 Question_1.cpp)
add_executable(Question_2.cpp Question_2.cpp)
add_executable(Question_3.cpp Question_3.cpp)
add_executable(Question_4.cpp Question_4.cpp)
add_executable(Question_5.cpp Question_5.cpp)
